--- a/ajustes.html
+++ b/ajustes.html
@@ -1,20 +1,20 @@
-<!-- contenedor inyectado en <nav> -->
-<div id="ajustes-wrapper">
-  <button id="ajustesBtn" aria-expanded="false" title="Ajustes de accesibilidad">⚙ Ajustes</button>
+<!-- Botón fijo en pantalla, siempre visible -->
+<button id="ajustesBtn" title="Mostrar ajustes de accesibilidad">Ajustes</button>
 
-  <div id="ajustes-menu" hidden>
-    <h2>Accesibilidad</h2>
-    <div class="aj-list">
-      <button data-ac="fontUp">A+</button>
-      <button data-ac="fontDown">A-</button>
-      <button data-ac="fontFamily">Fuente</button>
-      <button data-ac="darkMode">Oscuro</button>
-      <button data-ac="highContrast">Contraste</button>
-      <button data-ac="daltonico">Daltonismo</button>
-      <button data-ac="toggleCursor">Cursor</button>
-      <button data-ac="removeImages">Sin imágenes</button>
-      <button data-ac="toggleLinks">Links</button>
-      <button data-ac="reset" class="full">Reset</button>
-    </div>
+<!-- Fondo desenfocado y menú de ajustes centrado -->
+<div id="ajustes-modal-bg"></div>
+<div id="ajustes-modal" class="oculto" tabindex="0">
+  <button id="ajustesCerrar" title="Cerrar menú de ajustes">Cerrar</button>
+  <h2>Accesibilidad</h2>
+  <div class="ajustes-botones">
+    <button id="fontUp" title="Aumentar tamaño de fuente">Aumentar fuente</button>
+    <button id="fontDown" title="Disminuir tamaño de fuente">Disminuir fuente</button>
+    <button id="fontFamily" title="Cambiar fuente">Cambiar fuente</button>
+    <button id="darkMode" title="Modo oscuro">Modo oscuro</button>
+    <button id="highContrast" title="Alto contraste">Alto contraste</button>
+    <button id="daltonico" title="Modo daltonismo">Daltonismo</button>
+    <button id="toggleCursor" title="Cambiar cursor">Cursor grande</button>
+    <button id="removeImages" title="Sin imágenes">Ocultar imágenes</button>
+    <button id="toggleLinks" title="Links">Resaltar/Desactivar links</button>
   </div>
 </div>
