--- a/pages/cambio-climatico.html
+++ b/pages/cambio-climatico.html
@@ -2,6 +2,8 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="Content-Security-Policy"
+    content="default-src 'self'; img-src 'self' data:">
   <title>¿Qué es el ODS 13? | Acción por el Clima</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
