--- a/pages/acciones.html
+++ b/pages/acciones.html
@@ -2,9 +2,12 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="Content-Security-Policy"
+        content="default-src 'self'; img-src 'self' data:">
+
   <title>Acciones | ODS Acción por el Clima</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  
   <!--  estilos globales + propios  -->
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="../css/acciones.css">
