--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -2,6 +2,11 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="Content-Security-Policy"
+      content="
+        default-src 'self';
+        img-src    'self' data:;
+        form-action https://formsubmit.co;">
   <title>Contacto | ODS Acción por el Clima</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
