Actualizacion de informacion de pagina

--- a/pages/cv.html
+++ b/pages/cv.html
@@ -29,10 +29,10 @@
       <div class="cv-header">
         <img src="../assets/avatar.png" alt="Fotografía de perfil" class="cv-avatar" />
         <div class="cv-header-info">
-          <h1>Nombre Apellido</h1>
-          <p><strong>Carrera:</strong> Ing. en Sistemas Computacionales</p>
-          <p><strong>Email:</strong> tu.email@ejemplo.com</p>
-          <p><strong>Ubicación:</strong> Ciudad, País</p>
+          <h1>Cesar Jared Cobian Garcia</h1>
+          <p><strong>Carrera:</strong> Ingenieria en Software</p>
+          <p><strong>Email:</strong> ccobian8@ucol.mx</p>
+          <p><strong>Ubicación:</strong> Mexico</p>
         </div>
       </div>
 
@@ -48,11 +48,11 @@
         <div class="cv-cards">
           <div class="cv-card-item">
             <h3>Licenciatura en Sistemas Computacionales</h3>
-            <p>Universidad XYZ | 2021 - Actualidad</p>
+            <p>Universidad  | 2022 - Actualidad</p>
           </div>
           <div class="cv-card-item">
-            <h3>Bachillerato Tecnológico</h3>
-            <p>CBTis 123 | 2018 - 2021</p>
+            <h3>Bachillerato </h3>
+            <p># | 2019 - 2022</p>
           </div>
         </div>
       </div>
@@ -62,7 +62,7 @@
         <div class="cv-cards">
           <div class="cv-card-item">
             <h3>Desarrollador Web Junior</h3>
-            <p>Proyecto ODS 13 | 2024</p>
+            <p>Proyecto ODS 13 | 2025</p>
             <ul>
               <li>Diseño y desarrollo de sitio web educativo sobre acción por el clima.</li>
               <li>Implementación de funciones de accesibilidad y buenas prácticas de seguridad.</li>
@@ -74,12 +74,11 @@
       <div class="cv-section">
         <h2>Habilidades</h2>
         <ul class="cv-skills">
-          <li>HTML5 y CSS3</li>
+          <li>HTML y CSS</li>
           <li>JavaScript</li>
           <li>Control de versiones (Git)</li>
           <li>Desarrollo responsivo</li>
           <li>Accesibilidad web</li>
-          <li>Trabajo en equipo</li>
         </ul>
       </div>
     </section>
@@ -94,7 +93,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2024 Tu Nombre | ODS Acción por el Clima</p>
+    <p>&copy; 2025 Cesar Garcia | ODS 13 Acción por el Clima</p>
   </footer>
 
   <script>
