--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
   <!-- ========== FOOTER ========== -->
   <footer>
-    <p>&copy; 2024 Tu Nombre | ODS 13 Acción por el Clima</p>
+    <p>&copy; 2025 Cesar Garcia | ODS 13 Acción por el Clima</p>
   </footer>
 
   <!-- ========== SCRIPTS ========== -->
