--- a/pages/cambio-climatico.html
+++ b/pages/cambio-climatico.html
@@ -50,11 +50,10 @@
     </div>
 
     <!-- imagen -->
-<div class="img-ph">
-  <img src="../assets/temperatura.jpg"
-       alt="Gráfica del aumento de temperatura" loading="lazy"
-       class="themed-img">
-</div>
+    <div class="img-ph">
+      <img src="../assets/temperatura.jpg"
+           alt="Gráfica del incremento de temperatura global desde 1850" loading="lazy">
+    </div>
   </section>
 
   <!-- Causas -->
