--- a/pages/cambio-climatico.html
+++ b/pages/cambio-climatico.html
@@ -50,10 +50,13 @@
     </div>
 
     <!-- imagen -->
-    <div class="img-ph">
-      <img src="../assets/temperatura.jpg"
-           alt="Gráfica del incremento de temperatura global desde 1850" loading="lazy">
-    </div>
+<!-- imagen cifras -->
+<div class="img-ph">
+  <img src="../assets/impactos.jpg"
+       alt="Composición de incendios forestales y sequía"
+       loading="lazy" class="themed-img">
+</div>
+
   </section>
 
   <!-- Causas -->
@@ -97,11 +100,13 @@
       </div>
     </div>
 
-    <!-- imagen -->
-    <div class="img-ph">
-      <img src="../assets/impactos.jpg"
-           alt="Composición de incendios forestales y sequía" loading="lazy">
-    </div>
+<!-- imagen impactos -->
+<div class="img-ph">
+  <img src="../assets/impactos.jpg"
+       alt="Composición de incendios forestales y sequía"
+       loading="lazy" class="themed-img">
+</div>
+
   </section>
 
   <!-- Call to action -->
