correcciones de vista que es?

--- a/pages/cambio-climatico.html
+++ b/pages/cambio-climatico.html
@@ -49,13 +49,12 @@
       </ul>
     </div>
 
-    <!-- imagen -->
-<!-- imagen cifras -->
-<div class="img-ph">
-  <img src="../assets/impactos.jpg"
-       alt="Composición de incendios forestales y sequía"
-       loading="lazy" class="themed-img">
-</div>
+    <!-- imagen cifras -->
+    <div class="img-ph">
+    <img src="../assets/temperatura.jpg"
+        alt="Gráfica del incremento de temperatura global desde 1850"
+        loading="lazy" class="themed-img">
+    </div>
 
   </section>
 
@@ -100,12 +99,12 @@
       </div>
     </div>
 
-<!-- imagen impactos -->
-<div class="img-ph">
-  <img src="../assets/impactos.jpg"
-       alt="Composición de incendios forestales y sequía"
-       loading="lazy" class="themed-img">
-</div>
+    <!-- imagen impactos -->
+    <div class="img-ph">
+    <img src="../assets/impactos.jpg"
+        alt="Composición de incendios forestales y sequía"
+        loading="lazy" class="themed-img">
+    </div>
 
   </section>
 
