correcciones de vista que es?

--- a/pages/cambio-climatico.html
+++ b/pages/cambio-climatico.html
@@ -128,6 +128,8 @@
 <script src="../js/performance-enhance.js" defer></script>
 <script src="../js/animacion-vista.js"></script>
 <script src="../seguridad/seguridad.js" defer></script>
+<script src="js/accesibilidad.js"></script>
+<script src="js/incluir-ajustes.js"></script>
 
 <script>
   fetch('../ajustes.html')
