--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
   <script src="js/performance-enhance.js" defer></script>
   <script src="js/animacion-vista.js"></script>
   <script src="seguridad/seguridad.js" defer></script>
+  <script src="js/accesibilidad.js"></script>
+  <script src="js/incluir-ajustes.js"></script>
 
   <!-- botón de ajustes -->
   <script>
