--- a/pages/cambio-climatico.html
+++ b/pages/cambio-climatico.html
@@ -2,144 +2,69 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self'; img-src 'self' data:">
-  <title>¿Qué es el ODS 13? | Acción por el Clima</title>
+  <title>ODS 13 | ¿Qué es?</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <!-- estilos globales -->
   <link rel="stylesheet" href="../css/styles.css">
-  <link rel="stylesheet" href="../css/que-es.css">
+  <!-- estilos propios de esta vista -->
+  <link rel="stylesheet" href="../css/cambio-climatico.css">
+  <!-- accesibilidad común -->
   <link rel="stylesheet" href="../css/accesibilidad.css">
+
   <link rel="icon" href="../favicon.png" type="image/png">
 </head>
 <body>
-<header>
-  <nav>
-    <ul>
-      <li><a href="../index.html">Inicio</a></li>
-      <li><a href="cambio-climatico.html" aria-current="page">¿Qué es?</a></li>
-      <li><a href="acciones.html">Acciones</a></li>
-      <li><a href="cv.html">CV</a></li>
-      <li><a href="contacto.html">Contacto</a></li>
-    </ul>
-    <div id="ajustes-inject"></div>
-  </nav>
-</header>
+  <!-- ========== NAV ========== -->
+  <header>
+    <nav>
+      <ul>
+        <li><a href="../index.html">Inicio</a></li>
+        <li><a href="cambio-climatico.html" aria-current="page">¿Qué es?</a></li>
+        <li><a href="acciones.html">Acciones</a></li>
+        <li><a href="cv.html">CV</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
+      </ul>
+      <!-- aquí se inyectará el botón de Ajustes -->
+      <div id="ajustes-inject"></div>
+    </nav>
+  </header>
 
-<main>
-  <!-- HERO -->
-  <section class="card hero">
-    <h1>ODS 13: Acción por el Clima</h1>
-    <p>
-      El Objetivo de Desarrollo Sostenible 13 nos llama a tomar <b>medidas urgentes</b>
-      para combatir el cambio climático y sus impactos.<br>
-      Conoce su contexto, cifras clave y qué podemos hacer para lograr un planeta resiliente.
-    </p>
-  </section>
+  <!-- ========== MAIN ========== -->
+  <main>
+    <section class="intro">
+      <h1>ODS 13: Acción por el Clima</h1>
+      <p>
+        El Objetivo de Desarrollo Sostenible 13 nos llama a tomar <strong>medidas urgentes</strong> 
+        para combatir el cambio climático y sus impactos. Conoce su contexto, cifras clave 
+        y qué podemos hacer para lograr un planeta resiliente.
+      </p>
+    </section>
 
-  <!-- Cifras -->
-  <section class="card cifras">
-    <div class="texto">
+    <section class="cifras">
       <h2>El cambio climático en cifras</h2>
       <ul>
-        <li>La temperatura media global ya ha aumentado <b>1,1 °C</b> respecto a la era preindustrial.</li>
-        <li>La <b>década 2011-2020</b> fue la más cálida jamás registrada.</li>
-        <li>Más del <b>70 %</b> de los desastres naturales están relacionados con eventos climáticos extremos.</li>
-        <li>Los océanos absorben cerca del <b>90 %</b> del exceso de calor, provocando su acidificación.</li>
+        <li>La temperatura media global ya ha aumentado <strong>1,1 °C</strong> respecto a la era preindustrial.</li>
+        <li>La década <strong>2011–2020</strong> fue la más cálida jamás registrada.</li>
+        <li>Más del <strong>70 %</strong> de los desastres naturales están relacionados con fenómenos climáticos extremos.</li>
+        <li>Los océanos absorben cerca del <strong>90 %</strong> del exceso de calor, provocando su acidificación.</li>
       </ul>
-    </div>
+      <figure>
+        <img src="../assets/clima-grafica.jpg" alt="Gráfica de anomalías de temperatura 1901–2023">
+        <figcaption>2023 fue el año más caliente registrado, con +1,18 °C sobre la media 1901–2000.</figcaption>
+      </figure>
+    </section>
+  </main>
 
-    <!-- imagen cifras -->
-    <div class="img-ph">
-    <img src="../assets/temperatura.jpg"
-        alt="Gráfica del incremento de temperatura global desde 1850"
-        loading="lazy" class="themed-img">
-    </div>
+  <!-- ========== FOOTER ========== -->
+  <footer>
+    <p>&copy; 2025 César García | ODS 13 Acción por el Clima</p>
+  </footer>
 
-  </section>
-
-  <!-- Causas -->
-  <section class="card causas">
-    <h2>Causas principales de las emisiones</h2>
-    <div class="causas-grid">
-      <article class="causa">
-        <h3>Energía</h3>
-        <p>La quema de combustibles fósiles para electricidad y calor representa la mayor parte de las emisiones.</p>
-      </article>
-      <article class="causa">
-        <h3>Transporte</h3>
-        <p>Vehículos terrestres, aéreos y marítimos basados en combustibles fósiles liberan millones de toneladas de CO₂.</p>
-      </article>
-      <article class="causa">
-        <h3>Agricultura y ganadería</h3>
-        <p>La ganadería intensiva emite metano; la deforestación para pastos reduce sumideros de carbono.</p>
-      </article>
-      <article class="causa">
-        <h3>Industria</h3>
-        <p>Procesos industriales (cemento, acero, químicos) consumen grandes cantidades de energía y generan gases de efecto invernadero.</p>
-      </article>
-    </div>
-  </section>
-
-  <!-- Impactos -->
-  <section class="card impactos">
-    <h2>Impactos del cambio climático</h2>
-    <div class="impacto-flex">
-      <div class="impacto">
-        <h3>Eventos extremos</h3>
-        <p>Sequías, incendios forestales, huracanes y lluvias torrenciales son más frecuentes e intensos.</p>
-      </div>
-      <div class="impacto">
-        <h3>Pérdida de biodiversidad</h3>
-        <p>Muchas especies no logran adaptarse a los cambios rápidos de temperatura y hábitat.</p>
-      </div>
-      <div class="impacto">
-        <h3>Amenaza a la salud</h3>
-        <p>Aumento de enfermedades transmitidas por vectores y golpes de calor, especialmente en poblaciones vulnerables.</p>
-      </div>
-    </div>
-
-    <!-- imagen impactos -->
-    <div class="img-ph">
-    <img src="../assets/impactos.jpg"
-        alt="Composición de incendios forestales y sequía"
-        loading="lazy" class="themed-img">
-    </div>
-
-  </section>
-
-  <!-- Call to action -->
-  <section class="card call-action">
-    <h2>¿Qué podemos hacer?</h2>
-    <p>
-      Desde decisiones individuales, como mejorar la eficiencia energética en casa,
-      hasta acciones colectivas, como exigir políticas de energía limpia,
-      cada esfuerzo cuenta para mitigar el calentamiento global.
-    </p>
-    <a href="acciones.html" class="btn-ir">Descubre acciones concretas</a>
-  </section>
-</main>
-
-<footer>
-  <p>&copy; 2025 Cesar Garcia | ODS 13 Acción por el Clima</p>
-</footer>
-
-<script src="../js/device-detect.js"></script>
-<script src="../js/performance-enhance.js" defer></script>
-<script src="../js/animacion-vista.js"></script>
-<script src="../seguridad/seguridad.js" defer></script>
-<script src="js/accesibilidad.js"></script>
-<script src="js/incluir-ajustes.js"></script>
-
-<script>
-  fetch('../ajustes.html')
-    .then(r => r.text())
-    .then(html => {
-      document.getElementById('ajustes-inject').outerHTML = html;
-      const s = document.createElement('script');
-      s.src = '../js/accesibilidad.js';
-      document.body.appendChild(s);
-    });
-</script>
+  <!-- ========== SCRIPTS ========== -->
+  <!-- primero cargas accesibilidad.js (define iniciarAjustes) -->
+  <script src="../js/accesibilidad.js"></script>
+  <!-- después el injector que hará fetch a ../ajustes.html -->
+  <script src="../js/incluir-ajustes.js"></script>
 </body>
 </html>
