--- a/pages/cambio-climatico.html
+++ b/pages/cambio-climatico.html
@@ -5,17 +5,11 @@
   <title>ODS 13 | ¿Qué es?</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- estilos globales -->
   <link rel="stylesheet" href="../css/styles.css">
-  <!-- estilos propios de esta vista -->
-  <link rel="stylesheet" href="../css/cambio-climatico.css">
-  <!-- accesibilidad común -->
   <link rel="stylesheet" href="../css/accesibilidad.css">
-
   <link rel="icon" href="../favicon.png" type="image/png">
 </head>
 <body>
-  <!-- ========== NAV ========== -->
   <header>
     <nav>
       <ul>
@@ -25,23 +19,20 @@
         <li><a href="cv.html">CV</a></li>
         <li><a href="contacto.html">Contacto</a></li>
       </ul>
-      <!-- aquí se inyectará el botón de Ajustes -->
       <div id="ajustes-inject"></div>
     </nav>
   </header>
 
-  <!-- ========== MAIN ========== -->
-  <main>
-    <section class="intro">
+  <main class="contenido">
+    <section class="intro card">
       <h1>ODS 13: Acción por el Clima</h1>
       <p>
-        El Objetivo de Desarrollo Sostenible 13 nos llama a tomar <strong>medidas urgentes</strong> 
-        para combatir el cambio climático y sus impactos. Conoce su contexto, cifras clave 
-        y qué podemos hacer para lograr un planeta resiliente.
+        El Objetivo de Desarrollo Sostenible 13 nos llama a tomar <strong>medidas urgentes</strong> para combatir el cambio climático y sus impactos.
+        Conoce su contexto, cifras clave y qué podemos hacer para lograr un planeta resiliente.
       </p>
     </section>
 
-    <section class="cifras">
+    <section class="cifras card">
       <h2>El cambio climático en cifras</h2>
       <ul>
         <li>La temperatura media global ya ha aumentado <strong>1,1 °C</strong> respecto a la era preindustrial.</li>
@@ -50,21 +41,17 @@
         <li>Los océanos absorben cerca del <strong>90 %</strong> del exceso de calor, provocando su acidificación.</li>
       </ul>
       <figure>
-        <img src="../assets/clima-grafica.jpg" alt="Gráfica de anomalías de temperatura 1901–2023">
+        <img src="../assets/clima-grafica.jpg" alt="Gráfica de anomalías de temperatura 1901–2023" style="max-width: 480px; width: 100%; height: auto; border-radius: 8px; box-shadow: 0 0 10px #0002;">
         <figcaption>2023 fue el año más caliente registrado, con +1,18 °C sobre la media 1901–2000.</figcaption>
       </figure>
     </section>
   </main>
 
-  <!-- ========== FOOTER ========== -->
   <footer>
     <p>&copy; 2025 César García | ODS 13 Acción por el Clima</p>
   </footer>
 
-  <!-- ========== SCRIPTS ========== -->
-  <!-- primero cargas accesibilidad.js (define iniciarAjustes) -->
   <script src="../js/accesibilidad.js"></script>
-  <!-- después el injector que hará fetch a ../ajustes.html -->
   <script src="../js/incluir-ajustes.js"></script>
 </body>
 </html>
