correcciones de vista que es?

--- a/pages/cambio-climatico.html
+++ b/pages/cambio-climatico.html
@@ -51,6 +51,8 @@
     <p>&copy; 2025 César García | ODS 13 Acción por el Clima</p>
   </footer>
 
+  <!-- Scripts -->
+  <script src="../seguridad/seguridad.js" defer></script>
   <script src="../js/accesibilidad.js"></script>
   <script src="../js/incluir-ajustes.js"></script>
 </body>
