ajuste de ajustes

--- a/pages/acciones.html
+++ b/pages/acciones.html
@@ -119,5 +119,7 @@
         document.body.appendChild(s);
       });
   </script>
+  <script src="../js/accesibilidad.js"></script>
+
 </body>
 </html>
