--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -136,6 +136,8 @@
   <script src="../js/captcha-check.js" defer></script>
   <script src="../js/contacto.js" defer></script>
   <script src="../seguridad/seguridad.js" defer></script>
+  <script src="../js/accesibilidad.js"></script>
+
 
   <!-- Inyección del botón de ajustes -->
   <script>
