--- a/pages/cambio-climatico.html
+++ b/pages/cambio-climatico.html
@@ -55,5 +55,7 @@
   <script src="../seguridad/seguridad.js" defer></script>
   <script src="../js/accesibilidad.js"></script>
   <script src="../js/incluir-ajustes.js"></script>
+  <script src="../js/accesibilidad.js"></script>
+
 </body>
 </html>
