ajuste de accesibilidad

--- a/pages/cv.html
+++ b/pages/cv.html
@@ -109,8 +109,11 @@
   <script src="../js/cv.js" defer></script>
   <script src="../seguridad/seguridad.js" defer></script>
   <!-- en las páginas dentro de /pages/ -->
-    <script src="../js/device-detect.js"></script>
-    <script src="../js/performance-enhance.js" defer></script>
+  <script src="../js/device-detect.js"></script>
+  <script src="../js/performance-enhance.js" defer></script>
+  <script src="../js/accesibilidad.js"></script>
+
+    
 
 </body>
 </html>
