Proyecto corregido con ajustes de accesibilidad persistente

--- a/index.html
+++ b/index.html
@@ -101,5 +101,9 @@
         document.body.appendChild(s);
       });
   </script>
+
+  <script src="seguridad/seguridad.js" defer></script>
+  <script src="js/accesibilidad.js"></script>
+  <script src="js/incluir-ajustes.js"></script>
 </body>
 </html>
