--- a/pages/acciones.html
+++ b/pages/acciones.html
@@ -109,5 +109,9 @@
   <script src="../seguridad/seguridad.js" defer></script>
   <script src="../js/accesibilidad.js"></script>
 
+
+  <script src="../seguridad/seguridad.js" defer></script>
+  <script src="../js/accesibilidad.js"></script>
+  <script src="../js/incluir-ajustes.js"></script>
 </body>
 </html>
