--- a/pages/cv.html
+++ b/pages/cv.html
@@ -115,5 +115,9 @@
 
     
 
+
+  <script src="../seguridad/seguridad.js" defer></script>
+  <script src="../js/accesibilidad.js"></script>
+  <script src="../js/incluir-ajustes.js"></script>
 </body>
 </html>
