--- a/index.html
+++ b/index.html
@@ -87,20 +87,9 @@
   <script src="js/performance-enhance.js" defer></script>
   <script src="js/animacion-vista.js"></script>
   <script src="seguridad/seguridad.js" defer></script>
-  <script src="../js/accesibilidad.js"></script>
+  <script src="js/accesibilidad.js"></script>
   <script src="js/incluir-ajustes.js"></script>
 
-  <!-- botón de ajustes -->
-  <script>
-    fetch('ajustes.html')
-      .then(r => r.text())
-      .then(html => {
-        document.getElementById('ajustes-inject').outerHTML = html;
-        const s = document.createElement('script');
-        s.src = 'js/accesibilidad.js';
-        document.body.appendChild(s);
-      });
-  </script>
 
   <script src="seguridad/seguridad.js" defer></script>
   <script src="js/accesibilidad.js"></script>
