Correccion de css

--- a/pages/cambio-climatico.html
+++ b/pages/cambio-climatico.html
@@ -25,7 +25,7 @@
 
   <main class="contenido">
     <section class="intro card">
-      <h1>ODS 13: Acción por el Clima</h1>
+      <h1 style="color: #1c9c89;">ODS 13: Acción por el Clima</h1>
       <p>
         El Objetivo de Desarrollo Sostenible 13 nos llama a tomar <strong>medidas urgentes</strong> para combatir el cambio climático y sus impactos.
         Conoce su contexto, cifras clave y qué podemos hacer para lograr un planeta resiliente.
@@ -33,7 +33,7 @@
     </section>
 
     <section class="cifras card">
-      <h2>El cambio climático en cifras</h2>
+      <h2 style="color: #1572A1;">El cambio climático en cifras</h2>
       <ul>
         <li>La temperatura media global ya ha aumentado <strong>1,1 °C</strong> respecto a la era preindustrial.</li>
         <li>La década <strong>2011–2020</strong> fue la más cálida jamás registrada.</li>
